--- a/css/main.css
+++ b/css/main.css
@@ -761,6 +761,22 @@ footer {
   #restaurants article {
     margin-bottom: 2.5rem;
   }
+
+  .logo {
+    width: 11rem;
+    margin: 1.5rem auto 1rem auto;
+    font-size: 1.7rem;
+  }
+
+  .footer-container {
+    padding-bottom: 4.5rem;
+  }
+
+  .footer-links {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.15rem;
+  }
 }
 /*  ======================
     Desktop >1024px
@@ -811,7 +827,7 @@ footer {
 
   #restaurants,
 .footer-container {
-    width: 95%;
+    width: 90%;
     margin: 0 auto;
   }
 
@@ -829,18 +845,12 @@ footer {
     width: 14rem;
   }
 
-  .footer-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .footer-container h4,
-.footer-container a {
-    align-self: center;
-  }
-
   .logo {
     font-size: 2rem;
+  }
+
+  .footer-links {
+    font-size: 1.3rem;
   }
 }
 /*  ======================
@@ -849,10 +859,16 @@ footer {
 @media only screen and (min-width: 1440px) {
   #reservation,
 #operation,
-#restaurants {
+#restaurants,
+.footer-container {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  /* Footer */
+  .logo {
+    margin: 1.5rem auto;
   }
 }
 /*  ======================
