--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -231,10 +231,6 @@ p {
                 width: 12rem;
                 font-size: 1rem;
             }
-            .footer-container {
-                margin: 0 auto;
-                width: 90%;
-            }
         }
     /*  ======================
         Desktop >1440px
